--- a/index.html
+++ b/index.html
@@ -8,21 +8,55 @@
 </head>
 <body>
     <main>
+
+        <!-- Hero Section -->
         <div class="hero-section">
             <h3>Happy New Year</h3>
             <h1>New Year Party<br>Celebration</h1>
         </div>
+
+        <!-- Categories Section -->
         <div class="categories">
             <h1>65% OFF</h1>
             <h3>OUR HOLIDAY DEALS ARE BETTER</h3>
             <h2>ALL CATEGORIES</h2>
             <img src="images/New Year Photo.png" alt="New Year Photo">
         </div>
+
+        <!-- Party Section -->
         <div class="party">
             <h1>Welcome to midnight party</h1>
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
             <button>JOIN NOW</button>
         </div>
+
+        <!-- Portfolio Section -->
+        <div class="portfolio">
+            <h5>THE BEST GIFTS</h5>
+            <h1>Our Awesome Portfolio</h1>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+            <div class="portfolio-images">
+                <img src="./images/Rectangle 3.png" alt="">
+                <img src="./images/Rectangle 4.png" alt="">
+                <img src="./images/Rectangle 5.png" alt="">
+                <img src="./images/Rectangle 6.png" alt="">
+                <img src="./images/Rectangle 7.png" alt="">
+                <img src="./images/Rectangle 8.png" alt="">
+            </div>
+        </div>
+
+        <!-- Subscribe Section -->
+        <div class="subscribe">
+            <img src="./images/Group 61.png" alt="">
+            <h1>Subscribe Newsletter</h1>           
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+            <input type="email" name="" id="" placeholder="Enter Your Email">
+            <input type="submit" value="Subscribe">
+        </div>
     </main>
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
