--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <main>
 
         <!-- Hero Section -->
         <div class="hero-section">
-            <h3>Happy New Year</h3>
+            <div class="hero-section-text">
+                <h3>Happy New Year</h3>
             <h1>New Year Party<br>Celebration</h1>
+            </div>
         </div>
 
         <!-- Categories Section -->
@@ -56,7 +62,34 @@
     </main>
 
     <footer>
-        
+        <div class="contact-info">
+            <div><p>44, Big Building Roosevelt Street
+                Beach Gardens Florida 33410</p></div>
+            <div>
+                <div>
+                    <i class="fa-solid fa-phone"></i>
+                    <p>+00 123 584 124</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-globe"></i>
+                    <p>www.website.com</p>
+                </div>
+            </div>
+<hr>
+<img src="images/Facebook.png" alt="">
+<img src="images/Instagram.png" alt="">
+<img src="images/Twitter.png" alt="">
+<img src="images/Linkedin.png" alt="">
+<hr>
+<div>
+    <div>
+        <p>2017, All Rights Reserved.</p>
+    </div>
+    <div>
+        <p>Unsubscribe</p>
+    </div>
+</div>
+        </div>
     </footer>
 </body>
 </html>
